kubernetes/apps/adventurelog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adventurelog-db
  namespace: adventurelog
  labels:
    app.kubernetes.io/name: adventurelog-db
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: adventurelog-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adventurelog-db
    spec:
      containers:
        - name: postgis
          image: postgis/postgis:15-3.3
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: adventurelog-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: adventurelog-db
  namespace: adventurelog
spec:
  selector:
    app.kubernetes.io/name: adventurelog-db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adventurelog
  namespace: adventurelog
  labels:
    app.kubernetes.io/name: adventurelog
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: adventurelog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adventurelog
    spec:
      containers:
        - name: backend
          image: ghcr.io/seanmorley15/adventurelog-backend:latest
          ports:
            - name: api
              containerPort: 80
          volumeMounts:
            - name: media
              mountPath: /code/media
        - name: frontend
          image: ghcr.io/seanmorley15/adventurelog-frontend:latest
          ports:
            - name: http
              containerPort: 3000
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: adventurelog-media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: adventurelog
  namespace: adventurelog
spec:
  selector:
    app.kubernetes.io/name: adventurelog
  ports:
    - name: http
      port: 3000
      targetPort: http
