kubernetes/apps/adventurelog/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adventurelog
  namespace: adventurelog
spec:
  parentRefs:
    - name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - "adventure.local.fordkuppp.me"
  rules:
    - backendRefs:
        - name: adventurelog
          port: 3000
